enable recursion option

--- a/etc/bind/conf.d/options.conf
+++ b/etc/bind/conf.d/options.conf
@@ -8,7 +8,7 @@ options {
   listen-on { any; };
   version "";
   notify no;
-  recursion no;
+  recursion yes;
   allow-query { none; };
   allow-recursion { none; };
   allow-transfer { none; };
