update bind configuration and some bug fix

--- a/etc/bind/conf.d/options.conf
+++ b/etc/bind/conf.d/options.conf
@@ -1,9 +1,9 @@
 options {
-  directory "/etc/bind/zone";
-  pid-file  "/var/run/bind/named.pid";
-  dump-file "/var/run/bind/named_dump.db";
-  statistics-file "/var/run/bind/named.stats";
-  memstatistics-file "/var/run/bind/named_mem_stats";
+  directory "/var/bind";
+  pid-file  "/var/run/named/named.pid";
+  dump-file "/var/run/named/named_dump.db";
+  statistics-file "/var/run/named/named.stats";
+  memstatistics-file "/var/run/named/named_mem_stats";
   zone-statistics yes;
   listen-on { any; };
   version "";
