--- a/etc/bind/conf.d/zone.conf
+++ b/etc/bind/conf.d/zone.conf
@@ -1,19 +1,16 @@
 view internal {
   match-clients {
     localnets;
-    docker_net;
     trusted_net;
   };
   recursion yes;
   notify no;
   allow-query {
     localnets;
-    docker_net;
     trusted_net;
   };
   allow-recursion {
     localnets;
-    docker_net;
     trusted_net;
   };
   minimal-responses no;
@@ -21,11 +18,11 @@ view internal {
   allow-update { none; };
   zone "." in {
     type hint;
-    file "root.cache";
+    file "named.ca";
   };
   zone "localhost" in {
     type master;
-    file "localhost";
+    file "pri/localhost.zone";
   };
 };
 view external {
@@ -38,10 +35,10 @@ view external {
   allow-update { none; };
   zone "." in {
     type hint;
-    file "root.cache";
+    file "named.ca";
   };
   zone "localhost" in {
     type master;
-    file "localhost";
+    file "pri/localhost.zone";
   };
 };
