update logging category

--- a/etc/bind/conf.d/logging.conf
+++ b/etc/bind/conf.d/logging.conf
@@ -10,6 +10,7 @@ logging {
     null;
   };
   category default { named_log; };
+  category cname { named_log; };
   category general { named_log; };
   category database { named_log; };
   category security { named_log; };
@@ -28,6 +29,12 @@ logging {
   category edns-disabled { named_log; };
   category unmatched { null; };
   category lame-servers { null; };
+  category nsid { named_log; };
+  category rate-limit { named_log; };
   category queries { named_log; };
   category query-errors { named_log; };
+  category serve-stale { named_log; };
+  category spill { named_log; };
+  category trust-anchor-telemetry { named_log; };
+  category zoneload { named_log; };
 };
