Revert "enable logging unmatched and lame-servers category"
This reverts commit 5edf6c73c770fa8d1d5a5e0dfe7266b731dd9bbc.

--- a/etc/bind/conf.d/logging.conf
+++ b/etc/bind/conf.d/logging.conf
@@ -27,8 +27,8 @@ logging {
   category dnssec { named_log; };
   category delegation-only { named_log; };
   category edns-disabled { named_log; };
-  category unmatched { named_log; };
-  category lame-servers { named_log; };
+  category unmatched { null; };
+  category lame-servers { null; };
   category nsid { named_log; };
   category rate-limit { named_log; };
   category queries { named_log; };
