--- a/files/etc/named/conf.d/options.conf
+++ b/files/etc/named/conf.d/options.conf
@@ -1,5 +1,5 @@
 options {
-  directory "/var/bind";
+  directory "/var/named";
   pid-file  "/var/run/named/named.pid";
   dump-file "/var/run/named/named_dump.db";
   statistics-file "/var/run/named/named.stats";
@@ -8,12 +8,13 @@ options {
   listen-on { any; };
   version "";
   notify no;
-  recursion yes;
+  recursion no;
   allow-query { none; };
   allow-recursion { none; };
   allow-transfer { none; };
   allow-update { none; };
   empty-zones-enable yes;
-  dnssec-enable yes;
   dnssec-validation yes;
+  bindkeys-file "/etc/named/bind.keys";
+  managed-keys-directory "/var/named/dynamic";
 };
