--- a/files/etc/named/conf.d/zone-internal.conf
+++ b/files/etc/named/conf.d/zone-internal.conf
@@ -18,27 +18,10 @@ view internal {
   allow-update { none; };
   zone "." in {
     type hint;
-    file "named.ca";
+    file "/var/named/internal/root.cache";
   };
   zone "localhost" in {
     type master;
-    file "pri/localhost.zone";
-  };
-};
-view external {
-  match-clients { any; };
-  recursion no;
-  notify no;
-  allow-query { none; };
-  allow-recursion { none; };
-  allow-transfer { none; };
-  allow-update { none; };
-  zone "." in {
-    type hint;
-    file "named.ca";
-  };
-  zone "localhost" in {
-    type master;
-    file "pri/localhost.zone";
+    file "/var/named/internal/localhost";
   };
 };
