--- a/files/etc/named/conf.d/options.conf
+++ b/files/etc/named/conf.d/options.conf
@@ -17,4 +17,6 @@ options {
   dnssec-validation yes;
   bindkeys-file "/etc/named/bind.keys";
   managed-keys-directory "/var/named/dynamic";
+  dnstap { all; };
+  dnstap-output unix "/var/run/named/dnstap.sock";
 };
