--- a/files/etc/named/named.conf
+++ b/files/etc/named/named.conf
@@ -4,6 +4,9 @@ controls {
   inet 127.0.0.1 port 953
   allow { 127.0.0.1; } keys { "rndc-key"; };
 };
+statistics-channels {
+  inet 127.0.0.1 port 8053 allow { any; };
+};
 include "/etc/named/conf.d/options.conf";
 include "/etc/named/conf.d/logging.conf";
 include "/etc/named/conf.d/acl.conf";
