add unzip package and create rndc.key symlink

--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -32,6 +32,7 @@
           - git
           - tar
           - go
+          - unzip
         state: installed
     - name: install library-dependencies
       apk:
